--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>com.twilio.sdk</groupId>
 			<artifactId>twilio</artifactId>
-			<version>8.32.0</version>
+			<version>8.34.1</version>
 		</dependency>
 
 		<dependency>
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>2.7.0</version>
+			<version>2.7.3</version>
 		</dependency>
 
 		<dependency>
@@ -92,7 +92,16 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
+
+
 
 	<build>
 		<plugins>
